syntax = "proto3";
package openPanel;

import "google/protobuf/empty.proto";

enum BroadcastType {
  // payload include router.LinkStates in json format
  NOTIFY_LINK_STATE_CHANGE = 0;
}

message Broadcast {
  BroadcastType type = 1;
  string payload = 2;
}

message MultiBroadcastRequest {
  repeated Broadcast broadcasts = 1;
}

service BroadcastService {
  rpc Broadcast(MultiBroadcastRequest) returns (google.protobuf.Empty);
}

